--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <meta name="keywords" content="HTML,CSS,JavaScript">
         <meta name="author" content="Claudiu Hancu">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.png">
     </head>
 </html>
