--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
         <meta name="author" content="Claudiu Hancu">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon.png">
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+        <h1>
+            Curicullum Vitae
+        </h1>
+        <div>
+            Claudiu Hancu
+        </div>
+    </body>
 </html>
