--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <div>
             Claudiu Hancu
         </div>
+    <h2>
+        <div>
+            <img src="img_avatar.png" alt="Avatar">
+        </div>
+    </h2>
     </body>
 </html>
